--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <div>
-            <img id="logo" src="img/logo.png" alt="">
-            <h1 id="Delicious">Delicious</h1>
-            <p id="blog">The Best Food Blog on the Web</p>
+        <img id="logo" src="img/logo.png" alt="">
+        <div id="yumy">
+            <h3 style="font-family:'Dancing Script', cursive;font-size: 30px;font-weight: bold;display: inline;">
+                Delicious</h3><br>
+            <p style="color: darkgrey;display: inline;">The Best Food Blog on the Web</p>
+            <br><br>
         </div>
         <nav>
             <ul class="icone">
@@ -30,27 +35,72 @@
         </nav>
     </header>
     <main>
-        <div id=empty></div>
-        <div>
-            <h1>Chocolate Pizza</h1>
-            <p>posted on 15 Dec 2013/ Dessert</p>
-            <img id="print" src="img/print-icon.png" alt="">
+        <div id="empty"></div>
+        <div id=" photo">
+            <br>
+            <h1 style="font-family:'Fjalla One', sans-serif;font-size: 25px;font: weight 10px;">Chocolate Pizza</h1>
+            <p style="color: darkgrey;">posted on 15 Dec 2013/ Dessert</p>
+            <br>
+            <section id="print">
+                <img src="img/print-icon.png" alt="">
+                <p style="display: inline;font-size: smaller;color: rgb(136, 131, 131);">PRINT</p>
+            </section>
+
         </div>
         <img id="pizza" src="img/choco-pizza.png" alt="chocopizza">
         <pre
-            id="recipe">   For the fig-swirl:Melt butter over medium heat in a saucepan.Add brown sugar and stir to dissolve.Halve all of the figs and toss in the saucepan with water and lemon juice.Cook over medium heat,stirring frequantly,until you have a chunky-jammy mixture.Add salt with one or two stirs,set aside and let cool completely.</pre>
+            style="font-size: large;">   For the fig-swirl:Melt butter over medium heat in a saucepan.Add brown sugar and stir to dissolve.Halve all of the figs and toss <br>in the saucepan  water and lemon juice.Cook over medium heat,stirring frequantly,until you have a chunky-jammy mixture.<br> Add salt with one or two stirs,set aside and let cool completely.</pre>
         <br>
-        <pre>Ice cream :In a small pot over medium heat,combine milk,and granulater sugar is completely dissolved and the milk is just barely lukewarm.Whisk in the egg yolks.Set mixture in the fridge and wait until the fig mixture is cooled.</pre>
+        <pre style="font-size: large;">    Ice cream :In a small pot over medium heat,combine milk,and granulater sugar is completely dissolved and the milk is just<br> barely lukewarm.Whisk in the egg yolks.Set mixture in the fridge and wait until the fig mixture is cooled.
+        </pre>
         <br>
-        <pre>   Using an ice cream machine ,pour liquids into the frozen basin and process according to manufacturer instructions,i.e.,let spin and thicken for 20 minutes before adding mascarpone,fig jam mixture,and the nuts.<br>Continue to process for +/-10 minutes .Pour semi-frozen mixture into a pyrex dish or glass tupperware.Freeze for at least two hours before serving.
+        <pre style="font-size: large;">   Using an ice cream machine ,pour liquids into the frozen basin and process according to manufacturer instructions,i.e.,<br>let spin and thicken for 20 minutes before adding mascarpone,fig jam mixture,and the nuts.<br>Continue to process for +/-10 minutes .Pour semi-frozen mixture into a pyrex dish or glass tupperware.Freeze for at least <br>two hours before serving.
             </pre>
-        <img src="img/list-bg.png" alt="list">
+        <section id="list" >
+            <form id="form1" Ingredients="/ingredients_page.php">
+                <input type="checkbox" id="ingredient1" name="ingredient1" value="ing1">
+                <label for="ingredient1"> 11/2 cups milk </label><br>
+                <input type="checkbox" id="ingredient2" name="ingredient2" value="ing2">
+                <label for="ingredient2"> 1/2 cup mascarpone </label><br>
+                <input type="checkbox" id="ingredient3" name="ingredient3" value="ing3">
+                <label for="ingredient3"> 1/2 tsp pink salt</label><br>
+                <input type="checkbox" id="ingredient4" name="ingredient4" value="ing4">
+                <label for="ingredient4"> 1 lb Black Mission Figs </label><br>
+                <input type="checkbox" id="ingredient5" name="ingredient5" value="ing5">
+                <label for="ingredient5"> 1/2 cup brown sugar </label><br>
+                <input type="checkbox" id="ingredient6" name="ingredient6" value="ing6">
+                <label for="ingredient6"> 2-4 tbsp water </label><br><br>
+            </form>
+
+            <form id="form2">
+                <input type="checkbox" name="ingredient7" id="ingredient7" value="ing7">
+                <label for="ingredient7">1 1/2 cups heavy cream</label><br>
+                <input type="checkbox" name="ingredient8" id="ingredient8" value="ing8">
+                <label id="line8" for="ingredient8">1/3 granulated suger</label><br>
+                <input type="checkbox" name="ingredient9" id="ingredient9" value="ing9">
+                <label id="line9" for="ingredient9">2 egg yolks</label><br>
+                <input type="checkbox" name="ingredient10" id="ingredient10" value="ing10">
+                <label for="ingredient10">1 lemon juice</label><br>
+                <input type="checkbox" name="ingredient11" id="ingredient11" value="ing11">
+                <label for="ingredient11">2 tbsp butter</label><br>
+                <input type="checkbox" name="ingredient12" id="ingredient12" value="ing12">
+                <label for="ingredient12">1 cup honey roasted pecons,roughly chopped</label><br>
+            </form>
+        </section>
+        
     </main>
+
     <footer>
+        <br><br><div id="empty"></div>
         <img src="img/van-pic.png" alt="van">
+        <h2>Vanessa Stevenson</h2><br>
         <p>Food anthusiast, photography fan. add a pinch of raw foodism and that's pretty much who i am </p>
         <button>SHARE RECIPE</button>
-        <img src="img/small-logo.png" alt="smallogo">
+        
+        <hr>
+          <p style="text-align: center;color: darkgrey;">Delicious &#169; 2013.All rights reserved</p><br>
+          <p style="text-align: center;color: darkgrey;">Proudly published with Ghost</p>
+
     </footer>
     <script src="js/app.js"></script>
 </body>
